--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 pillow
 numpy
 requests
-tensorflow==2.5.0
+tensorflow==2.8.0
 fastapi
 python-multipart
 pillow
 matplotlib
 numpy
+streamlit==1.9.0
+
 
 #Run this file with - pip3 install -r requirements.txt
